fix height for h3 when wrapping

--- a/style/pricetable.scss
+++ b/style/pricetable.scss
@@ -8,6 +8,9 @@
 	border: 1px black;
 	border-style: none solid;
 	margin: -1px auto;
+	h3 {
+		height: 50px;
+	}
 	> div {
 		cursor: zoom-in;
 		margin: 0px;
